--- a/build.xml
+++ b/build.xml
@@ -8,6 +8,7 @@
   </tstamp>
   <property name="build.number" value="Coordination-${mpsBootstrapCore.version}" />
   <property name="mps.home" location="${basedir}/../../../local/MPS3.1" />
+  <property name="plantuml.lang" location="${basedir}/../plantuml-dsl" />
   <property name="artifacts.mpsStandalone" location="${mps.home}" />
   <property name="artifacts.mpsMakePlugin" location="${mps.home}" />
   <property name="artifacts.mps" location="${mps.home}" />
@@ -161,6 +162,51 @@
       <zipfileset dir="${build.tmp}/customProcessors/copyModels/languages-coordination-generator-template" prefix="module/generator/template" />
       <zipfileset dir="${build.tmp}/customProcessors/copyModels/languages-coordination-languageModels" prefix="module/languageModels" />
     </jar>
+    <mkdir dir="${build.tmp}/default/plantUML.jar" />
+    <mkdir dir="${build.tmp}/default/plantUML.jar/META-INF" />
+    <echoxml file="${build.tmp}/default/plantUML.jar/META-INF/module.xml">
+      <module namespace="plantUML" type="language" uuid="f9a14289-1671-4e1f-964f-453efed867e3">
+        <dependencies>
+          <module ref="6354ebe7-c22a-4a0f-ac54-50b52ab9b065(JDK)" />
+          <module ref="6ed54515-acc8-4d1e-a16c-9fd6cfe951ea(MPS.Core)" />
+          <module ref="1ed103c3-3aa6-49b7-9c21-6765ee11f224(MPS.Editor)" />
+          <module ref="8865b7a8-5271-43d3-884c-6fd1d9cfdd34(MPS.OpenAPI)" />
+          <module ref="4c6a28d1-2c60-478d-b36e-db9b3cbb21fb(closures.runtime)" />
+          <module ref="9b80526e-f0bf-4992-bdf5-cee39c1833f3(collections.runtime)" />
+          <module ref="a3e4657f-a76c-45bb-bbda-c764596ecc65(jetbrains.mps.baseLanguage.logging.runtime)" />
+          <module ref="d44dab97-aaac-44cb-9745-8a14db674c03(jetbrains.mps.baseLanguage.tuples.runtime)" />
+          <module ref="2af156ab-65c1-4a62-bd0d-ea734f71eab6(jetbrains.mps.dataFlow.runtime)" />
+          <module ref="8fe4c62a-2020-4ff4-8eda-f322a55bdc9f(jetbrains.mps.refactoring.runtime)" />
+          <module ref="9a4afe51-f114-4595-b5df-048ce3c596be(jetbrains.mps.runtime)" />
+        </dependencies>
+        <sources jar="plantUML-src.jar" descriptor="plantUML.mpl" />
+      </module>
+    </echoxml>
+    <jar destfile="${build.layout}/plugins/Coordination/languages/Coordination/plantUML.jar">
+      <fileset dir="${build.tmp}/java/out/plantUML" />
+      <fileset dir="${plantuml.lang}/languages/plantUML" includes="icons/**, resources/**" />
+      <fileset dir="${build.tmp}/default/plantUML.jar" />
+    </jar>
+    <jar destfile="${build.layout}/plugins/Coordination/languages/Coordination/plantUML-generator.jar">
+      <fileset dir="${build.tmp}/java/out/plantUML#3560655027465713227" />
+    </jar>
+    <copyModels todir="${build.tmp}/customProcessors/copyModels/languages-plantUML-generator-template">
+      <fileset dir="${plantuml.lang}/languages/plantUML/generator/template" includes="**/*.mps, **/*.metadata, **/*.history, **/*.mpsr, **/.model" />
+    </copyModels>
+    <copyModels todir="${build.tmp}/customProcessors/copyModels/languages-plantUML-languageModels">
+      <fileset dir="${plantuml.lang}/languages/plantUML/languageModels" includes="**/*.mps, **/*.metadata, **/*.history, **/*.mpsr, **/.model" />
+    </copyModels>
+    <jar destfile="${build.layout}/plugins/Coordination/languages/Coordination/plantUML-src.jar">
+      <fileset dir="${plantuml.lang}/languages/plantUML/generator/source_gen">
+        <exclude name="**/trace.info" />
+      </fileset>
+      <fileset dir="${plantuml.lang}/languages/plantUML/source_gen">
+        <exclude name="**/trace.info" />
+      </fileset>
+      <zipfileset file="${plantuml.lang}/languages/plantUML/plantUML.mpl" prefix="module" />
+      <zipfileset dir="${build.tmp}/customProcessors/copyModels/languages-plantUML-generator-template" prefix="module/generator/template" />
+      <zipfileset dir="${build.tmp}/customProcessors/copyModels/languages-plantUML-languageModels" prefix="module/languageModels" />
+    </jar>
     <copy todir="${build.layout}/plugins/Coordination/languages/Coordination">
       <fileset file="${basedir}/devkits/Coordination.devkit" />
     </copy>
@@ -183,7 +229,7 @@
     <delete dir="${build.layout}" />
   </target>
   
-  <target name="compileJava" depends="java.compile.coordination, java.compile.coordination#3975843521651967143" />
+  <target name="compileJava" depends="java.compile.coordination, java.compile.coordination#3975843521651967143, java.compile.plantUML, java.compile.plantUML#3560655027465713227" />
   
   <target name="processResources" />
   
@@ -252,12 +298,14 @@
       <chunk>
         <module file="${basedir}/devkits/Coordination.devkit" />
         <module file="${basedir}/languages/coordination/coordination.mpl" />
+        <module file="${plantuml.lang}/languages/plantUML/plantUML.mpl" />
       </chunk>
       <chunk />
       <jvmargs>
         <arg value="-Xmx512m" />
       </jvmargs>
       <macro name="mps.home" path="${mps.home}" />
+      <macro name="plantuml.lang" path="${plantuml.lang}" />
     </generate>
   </target>
   
@@ -267,7 +315,7 @@
   
   <target name="makeDependents" />
   
-  <target name="java.compile.coordination" depends="fetchDependencies">
+  <target name="java.compile.coordination" depends="java.compile.plantUML, fetchDependencies">
     <mkdir dir="${basedir}/languages/coordination/source_gen" />
     <mkdir dir="${build.tmp}/java/out/coordination" />
     <javac destdir="${build.tmp}/java/out/coordination" fork="true" includeantruntime="false">
@@ -285,6 +333,7 @@
         <fileset file="${artifacts.mpsStandalone}/lib/mps-editor-runtime.jar" />
         <fileset file="${artifacts.mpsStandalone}/lib/mps-editor.jar" />
         <fileset file="${artifacts.mpsStandalone}/lib/mps-platform.jar" />
+        <pathelement path="${build.tmp}/java/out/plantUML" />
         <fileset file="${artifacts.mpsStandalone}/lib/log4j.jar" />
         <fileset file="${artifacts.mpsStandalone}/lib/annotations.jar" />
         <fileset file="${artifacts.mpsStandalone}/lib/jdom.jar" />
@@ -308,7 +357,7 @@
     </javac>
   </target>
   
-  <target name="java.compile.coordination#3975843521651967143" depends="java.compile.coordination, fetchDependencies">
+  <target name="java.compile.coordination#3975843521651967143" depends="java.compile.coordination, java.compile.plantUML, fetchDependencies">
     <mkdir dir="${basedir}/languages/coordination/generator/source_gen" />
     <mkdir dir="${build.tmp}/java/out/coordination#3975843521651967143" />
     <javac destdir="${build.tmp}/java/out/coordination#3975843521651967143" fork="true" includeantruntime="false">
@@ -327,6 +376,7 @@
         <fileset file="${artifacts.mpsStandalone}/lib/mps-editor.jar" />
         <fileset file="${artifacts.mpsStandalone}/lib/mps-platform.jar" />
         <pathelement path="${build.tmp}/java/out/coordination" />
+        <pathelement path="${build.tmp}/java/out/plantUML" />
         <fileset file="${artifacts.mpsStandalone}/lib/log4j.jar" />
         <fileset file="${artifacts.mpsStandalone}/lib/annotations.jar" />
         <fileset file="${artifacts.mpsStandalone}/lib/jdom.jar" />
@@ -350,8 +400,91 @@
     </javac>
   </target>
   
+  <target name="java.compile.plantUML" depends="fetchDependencies">
+    <mkdir dir="${plantuml.lang}/languages/plantUML/source_gen" />
+    <mkdir dir="${build.tmp}/java/out/plantUML" />
+    <javac destdir="${build.tmp}/java/out/plantUML" fork="true" includeantruntime="false">
+      <compilerarg value="-Xlint:none" />
+      <src>
+        <path location="${plantuml.lang}/languages/plantUML/source_gen" />
+      </src>
+      <classpath>
+        <fileset file="${artifacts.mpsStandalone}/lib/mps-openapi.jar" />
+        <fileset file="${artifacts.mpsStandalone}/lib/mps-closures.jar" />
+        <fileset file="${artifacts.mpsStandalone}/lib/mps-collections.jar" />
+        <fileset file="${artifacts.mpsStandalone}/lib/mps-tuples.jar" />
+        <fileset file="${artifacts.mpsStandalone}/lib/mps-core.jar" />
+        <fileset file="${artifacts.mpsStandalone}/lib/mps-editor-api.jar" />
+        <fileset file="${artifacts.mpsStandalone}/lib/mps-editor-runtime.jar" />
+        <fileset file="${artifacts.mpsStandalone}/lib/mps-editor.jar" />
+        <fileset file="${artifacts.mpsStandalone}/lib/mps-platform.jar" />
+        <fileset file="${artifacts.mpsStandalone}/lib/log4j.jar" />
+        <fileset file="${artifacts.mpsStandalone}/lib/annotations.jar" />
+        <fileset file="${artifacts.mpsStandalone}/lib/jdom.jar" />
+        <fileset file="${artifacts.mpsStandalone}/lib/ecj-4.3.2.jar" />
+        <fileset file="${artifacts.mpsStandalone}/lib/trove4j.jar" />
+        <fileset file="${artifacts.mpsStandalone}/lib/xstream-1.4.3.jar" />
+        <fileset file="${artifacts.mpsStandalone}/lib/asm4-all.jar" />
+        <fileset file="${artifacts.mpsStandalone}/lib/asm-all.jar" />
+        <fileset file="${artifacts.mpsStandalone}/lib/diffutils-1.2.1.jar" />
+        <fileset dir="${artifacts.mpsStandalone}/lib" includes="*.jar" />
+        <fileset file="${artifacts.mpsStandalone}/languages/baseLanguage/jetbrains.mps.baseLanguage.jar" />
+        <fileset file="${artifacts.mpsStandalone}/languages/baseLanguage/jetbrains.mps.baseLanguage.blTypes.jar" />
+        <fileset file="${artifacts.mpsStandalone}/languages/baseLanguage/jetbrains.mps.baseLanguage.closures.jar" />
+        <fileset file="${artifacts.mpsStandalone}/languages/baseLanguage/jetbrains.mps.baseLanguage.collections.jar" />
+        <fileset file="${artifacts.mpsStandalone}/languages/baseLanguage/jetbrains.mps.baseLanguage.scopes.jar" />
+        <fileset file="${artifacts.mpsStandalone}/languages/languageDesign/jetbrains.mps.lang.core.jar" />
+        <fileset file="${artifacts.mpsStandalone}/languages/languageDesign/jetbrains.mps.lang.structure.jar" />
+        <fileset file="${artifacts.mpsStandalone}/languages/languageDesign/jetbrains.mps.lang.traceable.jar" />
+      </classpath>
+    </javac>
+  </target>
+  
+  <target name="java.compile.plantUML#3560655027465713227" depends="java.compile.plantUML, fetchDependencies">
+    <mkdir dir="${plantuml.lang}/languages/plantUML/generator/source_gen" />
+    <mkdir dir="${build.tmp}/java/out/plantUML#3560655027465713227" />
+    <javac destdir="${build.tmp}/java/out/plantUML#3560655027465713227" fork="true" includeantruntime="false">
+      <compilerarg value="-Xlint:none" />
+      <src>
+        <path location="${plantuml.lang}/languages/plantUML/generator/source_gen" />
+      </src>
+      <classpath>
+        <fileset file="${artifacts.mpsStandalone}/lib/mps-openapi.jar" />
+        <fileset file="${artifacts.mpsStandalone}/lib/mps-closures.jar" />
+        <fileset file="${artifacts.mpsStandalone}/lib/mps-collections.jar" />
+        <fileset file="${artifacts.mpsStandalone}/lib/mps-tuples.jar" />
+        <fileset file="${artifacts.mpsStandalone}/lib/mps-core.jar" />
+        <fileset file="${artifacts.mpsStandalone}/lib/mps-editor-api.jar" />
+        <fileset file="${artifacts.mpsStandalone}/lib/mps-editor-runtime.jar" />
+        <fileset file="${artifacts.mpsStandalone}/lib/mps-editor.jar" />
+        <fileset file="${artifacts.mpsStandalone}/lib/mps-platform.jar" />
+        <pathelement path="${build.tmp}/java/out/plantUML" />
+        <fileset file="${artifacts.mpsStandalone}/lib/log4j.jar" />
+        <fileset file="${artifacts.mpsStandalone}/lib/annotations.jar" />
+        <fileset file="${artifacts.mpsStandalone}/lib/jdom.jar" />
+        <fileset file="${artifacts.mpsStandalone}/lib/ecj-4.3.2.jar" />
+        <fileset file="${artifacts.mpsStandalone}/lib/trove4j.jar" />
+        <fileset file="${artifacts.mpsStandalone}/lib/xstream-1.4.3.jar" />
+        <fileset file="${artifacts.mpsStandalone}/lib/asm4-all.jar" />
+        <fileset file="${artifacts.mpsStandalone}/lib/asm-all.jar" />
+        <fileset file="${artifacts.mpsStandalone}/lib/diffutils-1.2.1.jar" />
+        <fileset dir="${artifacts.mpsStandalone}/lib" includes="*.jar" />
+        <fileset file="${artifacts.mpsStandalone}/languages/baseLanguage/jetbrains.mps.baseLanguage.jar" />
+        <fileset file="${artifacts.mpsStandalone}/languages/baseLanguage/jetbrains.mps.baseLanguage.blTypes.jar" />
+        <fileset file="${artifacts.mpsStandalone}/languages/baseLanguage/jetbrains.mps.baseLanguage.closures.jar" />
+        <fileset file="${artifacts.mpsStandalone}/languages/baseLanguage/jetbrains.mps.baseLanguage.collections.jar" />
+        <fileset file="${artifacts.mpsStandalone}/languages/baseLanguage/jetbrains.mps.baseLanguage.scopes.jar" />
+        <fileset file="${artifacts.mpsStandalone}/languages/languageDesign/jetbrains.mps.lang.core.jar" />
+        <fileset file="${artifacts.mpsStandalone}/languages/languageDesign/jetbrains.mps.lang.structure.jar" />
+        <fileset file="${artifacts.mpsStandalone}/languages/languageDesign/jetbrains.mps.lang.traceable.jar" />
+      </classpath>
+    </javac>
+  </target>
+  
   <target name="cleanSources">
     <delete dir="${basedir}/languages/coordination/source_gen" />
+    <delete dir="${plantuml.lang}/languages/plantUML/source_gen" />
     <delete dir="${basedir}/languages/coordination/generator/source_gen" />
+    <delete dir="${plantuml.lang}/languages/plantUML/generator/source_gen" />
   </target>
 </project>
