--- a/build.xml
+++ b/build.xml
@@ -7,8 +7,8 @@
     <format property="date" pattern="yyyyMMdd" />
   </tstamp>
   <property name="build.number" value="Coordination-135.SNAPSHOT" />
-  <property name="mps.home" location="${basedir}/../../../local/MPS 3.1" />
-  <property name="plantuml.lang" location="${basedir}/../plantuml-dsl" />
+  <property name="mps.home" location="${basedir}/../../../../local/MPS3.2" />
+  <property name="plantuml.lang" location="${basedir}/../plantuml" />
   <property name="artifacts.mpsStandalone" location="${mps.home}" />
   <property name="artifacts.mpsMakePlugin" location="${mps.home}" />
   <property name="artifacts.mps" location="${mps.home}" />
